--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,15 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+lib_deps = 
+	
+	me-no-dev/AsyncTCP@^1.1.1
+	me-no-dev/ESP Async WebServer@^1.2.3
+
+lib_extra_dirs =
+
+	lib/LedController/ledController.h
+	lib/WebSocket/websocket.h
+	lib/Wifi_2024/wifi_2024.h
+	
