--- a/platformio.ini
+++ b/platformio.ini
@@ -14,13 +14,12 @@ board = esp32dev
 framework = arduino
 
 lib_deps = 
-	
 	me-no-dev/AsyncTCP@^1.1.1
 	me-no-dev/ESP Async WebServer@^1.2.3
+	arduino-libraries/Arduino_JSON@^0.2.0
 
-lib_extra_dirs =
-
-	lib/LedController/ledController.h
-	lib/WebSocket/websocket.h
-	lib/Wifi_2024/wifi_2024.h
-	
+lib_extra_dirs = 	
+	lib\Interruption
+	lib\LedController
+	lib\WebSocket
+	lib\Wifi_2024
